# Educational-stuff

./: .gitignore  Readme.md  pyproject.toml  readme.md
LetCode/: 01_two_sum.py  02_add_two_numbers.py  03_longest_substring_without_repeating.py  09_palindrom_number.py  217_contains_duplicate.py
algorithms/: quick_sort.py  sorting_algorithms.py
ansible/: Dockerfile  ansible.cfg  hosts  install_deps_1.yml  install_deps_2.yml  key.pub  site.yml  site_tags.yml  theory.md
asincio_theory/asynchronous_python/: 1_select_event_loop.py  2_selectors.py  3_async_generators.py  4_coroutines.py  5_delegation_gen.py  simple_socket.py
asincio_theory/c_1/: 01.py  02_asincio.py
asincio_theory/practice/: 01_coroutine.py
asincio_theory/util/: delay_functions.py
asincio_theory/с_2/: 01_cancel_tasks.py
django_cache/: README.MD  db.sqlite3  requirements.txt
django_cache/apicalls/: views.py
django_cache/core/: settings.py
django_db_buffer/: Readme.md  docker-compose.yml
django_db_buffer/configuration/: settings.py  urls.py
django_db_buffer/core/: models.py  services.py  urls.py  views.py
django_db_buffer/db_buffer_service/: __init__.py  buffer.py  buffer_2.py
django_server_linux/: Dockerfile  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  readme.md  requirements.txt
django_server_linux/configuration/: settings.py  urls.py  views.py  wsgi.py
docker/: commands.sh  docker-compose.yml  readme.md
fast_api/: crud.py  database.py  main.py  models.py  schemas.py  theory.md
networks/: home_network.md
pytest_theory/: readme.md
(+45 files in other folders)
