[tool.poetry]
name = "knowladge-worm"
version = "0.1.0"
description = ""
authors = ["ArturZhukovets <bnlvdn7483@gmail.com>"]
readme = "README.md"
packages = [{include = "knowladge_worm"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"
requests = "^2.31.0"
django = "^4.2.2"
selenium = "^4.10.0"
gunicorn = "^21.2.0"
fastapi = "==0.55.1"
uvicorn = "0.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
